k8s/namespaces/media/calibre-web/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: calibre-web
  namespace: media
  labels:
    app.kubernetes.io/name: calibre-web
    app.kubernetes.io/managed-by: flux
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: calibre-web
  template:
    metadata:
      labels:
        app.kubernetes.io/name: calibre-web
        app.kubernetes.io/managed-by: flux
    spec:
      runtimeClassName: youki
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
      automountServiceAccountToken: false
      containers:
        - name: calibre-web
          # renovate: datasource=docker depName=lscr.io/linuxserver/calibre-web
          image: lscr.io/linuxserver/calibre-web:latest@sha256:38e1cd557dea7f7816849feb30364141dab7f819e2dbdfa652ce19b948162896
          imagePullPolicy: IfNotPresent
          environment:
            - name: PUID
              value: "1000"
            - name: PGID
              value: "1000"
          ports:
            - containerPort: 8083
              protocol: TCP
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
              ephemeral-storage: "1Gi"
            limits:
              cpu: "2000m"
              memory: "2048Mi"
              ephemeral-storage: "5Gi"
          volumeMounts:
            - name: config
              mountPath: /config
            - name: media
              mountPath: /books
              subPath: media/books
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: calibre-web-config
        - name: media
          persistentVolumeClaim:
            claimName: media
