k8s/namespaces/media/calibre-web/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: calibre-web
  namespace: media
  labels:
    app.kubernetes.io/name: calibre-web
    app.kubernetes.io/managed-by: flux
spec:
  parentRefs:
    - name: nginx-gateway
      namespace: ingress
      sectionName: https
  hostnames:
    - "calibre.hosted.fail"
  rules:
    - filters:
        - type: ExtensionRef
          extensionRef:
            group: gateway.nginx.org
            kind: SnippetsFilter
            name: internal-whitelist
        - type: ExtensionRef
          extensionRef:
            group: gateway.nginx.org
            kind: SnippetsFilter
            name: tinyauth-forward
      backendRefs:
        - name: calibre-web
          port: 8083
